--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="jarvisApp">
 <head>
-    <title>Title of the document</title>
+    <title title-dir></title>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="js/dist.js"></script>
+    <link href="css/dist.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-The content of the document......
+    <div class="container">
+        <ui-view></ui-view>
+    </div>
+    <script src="//localhost:5050/livereload.js"></script>
 </body>
 
 </html>
