--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,20 @@
 </head>
 
 <body>
-    <div class="container">
+    <header>
+        <nav class="top-nav valign indigo darken-4" style="height:122px">
+            <div class="container">
+                <div class="nav-wrapper valign-wrapper" style="height:122px;">
+                    <a class="page-title valign" style="font-size:48px" title-dir>Devices</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container" style="padding-top: 20px;">
         <ui-view></ui-view>
     </div>
+
     <script src="//localhost:5050/livereload.js"></script>
 </body>
 
