--- a/proofOfConcept/public/index.html
+++ b/proofOfConcept/public/index.html
@@ -2,12 +2,13 @@
 <html ng-app="jarvisApp">
 <head>
     <title title-dir></title>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
     <script src="js/dist.js"></script>
     <link href="css/dist.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+
     <header>
         <nav class="top-nav valign indigo darken-4" style="height:122px">
             <div class="container">
