standaard titel van devices naar title

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
         <nav class="top-nav valign indigo darken-4" style="height:122px">
             <div class="container">
                 <div class="nav-wrapper valign-wrapper" style="height:122px;">
-                    <a class="page-title valign" style="font-size:48px" title-dir>Devices</a>
+                    <a class="page-title valign" style="font-size:48px" title-dir>Title</a>
                 </div>
             </div>
         </nav>
