--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
 
-    <div style="padding-top: 60px;" id="container">
+    <div style="padding-top: 60px;">
         <ui-view></ui-view>
     </div>
 
