--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
                     <a class="valign" title-dir style="font-size:22px; color: black;">Title</a>
                 </div>
                 <div class="col m1">
-                    <img src="images/icon_wifi.png" style="width: 30px; margin-top:13px;">
+                    <img src="images/icon_wifi.png" style="width: 30px; margin-left:-25px; margin-top:13px;">
                 </div>
-                <div class="col m1" style="color:black; margin-left:-30px; margin-top:-2px; font-size:28px;">
+                <div class="col m1" style="color:black; margin-left:-30px; margin-top:-4px; font-size:28px;">
                     11:30
                 </div>
             </div>
