allemaal heftige edits omtrent onze prachtige user interface

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                     <img src="images/icon_wifi.png" style="width: 30px; margin-left:-25px; margin-top:13px;">
                 </div>
                 <div class="col m1" style="color:black; margin-left:-30px; margin-top:-4px; font-size:28px;">
-                    11:30
+                    <clock format="HH:mm"></clock>
                 </div>
             </div>
         </nav>
