--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html ng-app="jarvisApp">
 <head>
     <title title-dir></title>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
     <script src="js/dist.js"></script>
     <link href="css/dist.css" rel="stylesheet" type="text/css">
 </head>
