--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body class="white">
+
+    <!--<div id="alert" class="gradient">-->
+        <!--<img class="invert" style="width:160px; margin-top:-25px;" src="http://www.rhpreventie.nl/media/catalog/product/cache/1/image/1200x1200/9df78eab33525d08d6e5fb8d27136e95/a/p/apollo-rookmelder-brandmeldinstallatie_1.png"><br>-->
+        <!--<span style="font-size:45px;">Alert!</span><br>-->
+        <!--Rookmelder woonkamer-->
+    <!--</div>-->
+
     <header>
         <nav class="top-nav no-shadow white" style="height: 50px;position: fixed;">
             <div class="row" style="padding-left:25px; padding-top:0px; margin-top:-5px;">
@@ -43,8 +50,6 @@
             </div>
         </div>
     <!--</div>-->
-
-
 
     <script src="//localhost:5050/livereload.js"></script>
 </body>
