added support for events

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,10 @@
 
 <body class="white">
 
-    <!--<div id="alert" class="gradient">-->
-        <!--<img class="invert" style="width:160px; margin-top:-25px;" src="http://www.rhpreventie.nl/media/catalog/product/cache/1/image/1200x1200/9df78eab33525d08d6e5fb8d27136e95/a/p/apollo-rookmelder-brandmeldinstallatie_1.png"><br>-->
-        <!--<span style="font-size:45px;">Alert!</span><br>-->
-        <!--Rookmelder woonkamer-->
-    <!--</div>-->
+    <div id="event" class="severity1">
+        <img class="invert" id="eventImage" style="width:160px; margin-top:-25px;" src=""><br>
+        <span id="eventMessage" style="font-size:45px;"></span><br>
+    </div>
 
     <header>
         <div ui-view="headerView"></div>
