--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <div class="row ptop_50">
-        <div class="col m9 nopad">
+        <div class="col m9 nopad" id="paneleft">
             <div class="row">
                 <div class="col m12 mainwindow">
                     <div ui-view="mainView"></div>
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div class="col m3 backpanel_dark logwindow nopad">
+        <div class=" col m3 backpanel_dark logwindow nopad">
             <div ui-view="logView"></div>
         </div>
     </div>
