changed rule-engine to work with scenarios instead of devices

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,26 @@
         </div>
     </div>
 
+    <div id="conflictmodal" class="modal">
+        <div class="modal-content" style="text-align:center;">
+            <p>Oeps! er is een conflict gevonden. Welk scenario wil je dat ik uitvoer?</p>
+            <div class="row">
+                <div class="col m6">
+                    <div class="card touch" style="padding:10px; text-align:center;">
+                        Ik wil deze uitvoeren #1
+                    </div>
+                </div>
+                <div class="col m6">
+                    <div class="card touch" style="padding:10px; text-align:center;">
+                        Maar ik conflicteer met deze
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
     <script src="//localhost:5050/livereload.js"></script>
 </body>
-
 </html>
