rule engine DND voor scenario's

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="css/dist.css" rel="stylesheet" type="text/css">
 </head>
 
-<body class="white">
+<body class="white recbody">
 
     <header>
         <div ui-view="headerView"></div>
