--- a/tvdemo/frontend/index.html
+++ b/tvdemo/frontend/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
+        <div id="tv"></div>
+    </div>
     <script src="bundle.js"></script>
 </body>
 </html>
