--- a/tvdemo/frontend/index.html
+++ b/tvdemo/frontend/index.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container">
-        <div id="tv"></div>
-    </div>
+    <div id="container"></div>
     <script src="bundle.js"></script>
 </body>
 </html>
